More generics work.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@672672 13f79535-47bb-0310-9956-ffa450edef68